reface: updated html file

--- a/index.html
+++ b/index.html
@@ -3,12 +3,84 @@
 <head>
    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <title>lab3_2</title>
-</head>
+    <title>CV</title>
+   </head>
 <body>
-
-  <div class="wreaper">
-     <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+   <div class="line"></div>
+   <header class = "header">
+      <div class="container"></div>
+      <h1>Igor</h1>
+      <p><img src="assets/img/IMG_20230709_170750_385.jpg" alt="" width="250" height="170"></p>
+      <nav class="nav">
+         <ul class="nav-list">
+           <li class="nav-item"><a href="#Contacts" class="nav-link">Contacts</a></li>
+           <li class="nav-item"><a href="#WhoIam?" class="nav-link">Who I am?</a></li>
+           <li class="nav-item"><a href="#MySkills" class="nav-link">My skills</a></li>
+           <li class="nav-item"><a href="#CodeExample" class="nav-link">Code example</a></li>
+           <li class="nav-item"><a href="#Languages" class="nav-link">Languages</a></li>
+         </ul>
+       </nav>
+   </header>
+   <article>
+      <a id="Contacts"></a>
+      <h2>Contacts</h2>
+   </article>
+   <hr>
+   <ul>
+      <li>GitHub: Bluetooth Anton</li>
+      <li>Location: Belarus</li>
+      
+    </ul>
+    <a id="WhoIam?"></a>
+    <article>
+      <h3>Who I am?</h3>
+   </article>
+   <hr>
+  <p><img src="assets/video/computer-of-early-age-88jmk0vzh3l2zuvr.gif" alt="" width="150" height="130" class="rightpic">Hi! I am a 21 y.o. student of mathematics and audio engeneer from Belarus. I entered the magical word of writing programs at the age of 9, since then I have been learning more and more new programming languages.
+   At some point, at the university I got acquainted with enviroments and principles of Front-end development, using html, css, bootstrap and js. I want to learn more about this soft, it have more creative aspect then the others, so that is why i want to pass this course, starting experiments with them and maybe going further, making some real projects and finding purpouse in this life in this application area.</p>   
+   <a id="MySkills"></a>
+   <article>
+  <h4>My skills</h4>
+</article>
+  <hr>
+   <ul>
+      <li>Front-end - HTML, CSS, JS, Bootstrap, PHP;</li>
+      <li>OOP - C++, Java, Python, C#;</li>
+      <li>Graphics - Open GL.</li>
+  </ul>
+  <a id="CodeExample"></a>
+  <article>
+   <h5>Code example</h5>
+  </article>
+  <hr>
+  <p>Here is my code exerpt on js:</p>
+  <p><img src="assets/img/2023-07-02_16-58-57.png" alt=""></p>
+  <p>That is the part of an application for weather measurement in different parts of the world, using Google Maps.</p>
+  <a id="Languages"></a>
+  <article>
+   <h6>Languages</h6>
+  </article>
+  <hr>
+  <ul>
+   <li>English - B2-C1;</li>
+   <li>Lithuanian - A2;</li>
+   <li>Polish - A1.</li>
+</ul>
+   <div class="wreaper">
+     <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
   </div>
+<footer class = "footer">
+  <div class="container"></div>
+  <div class="footblock">
+  <p>2023 all rights reserved</p>
+</div>
+  <div class="footblock"> 
+  <p><a href="https://bluetoothanton.github.io/rsschool-cv/">  My GitHub  </a></p>
+</div>
+  <div class="footblock">
+  <p><a href="https://github.com/rolling-scopes-school/tasks/tree/master/stage0#%D0%BD%D0%B5%D0%B4%D0%B5%D0%BB%D1%8F-2"><img src="assets/svg/rs_school_js.svg" alt="" width="80" height="55"></a></p>
+</div>
+</footer>  
+  <div class="line"></div>
 </body>
 </html>
